--- a/index.html
+++ b/index.html
@@ -11,19 +11,18 @@
 <body>
     <div class="all">
         <div class="diya">
-            <div class="diyalogo">
-                <img src="img/Vector.png" alt="diya.logo">
-            </div>
-            <div class="flaglogo">
-                <img src="img/Flag.png" alt="flag.logo">
-            </div>
-        </div>
+            <img class="diyalogo" src="img/Vector.png" alt="diya.logo">
+            <img class="flaglogo" src="img/Flag.png" alt="flag.logo">
+        </div> 
         <div class="flag">
-                <img class="backgrd" src="img/Blue.png" alt="background">
-                <img class="gluph" src="img/Glyph-1.png" alt="gluph">
+            <img class="backgrd" src="img/Blue.png" alt="background">
+            <img class="gluph" src="img/Glyph-1.png" alt="gluph">
         </div>
         <div class="krug">
-
+            <div class="border">
+                <img class="blue" src="img/Blue.png" alt="blue">
+                <img class="secondgluph" src="img/Glyph-1.png" alt="Gluph">
+            </div>
         </div>
     </div>
 </body>
